Fix vim plugin install; Adjust VIM and tmux configs; Add tmux-power8

--- a/poky/.tmux.conf
+++ b/poky/.tmux.conf
@@ -1,5 +1,16 @@
+# Mouse input support
 set -g mouse on
+
+# Terminal setup for 256 color support
 set -g default-terminal "xterm-256color"
+
+# Force default shell to bash
 set -g default-shell /bin/bash
 
+# Key forwarding for vim
 set-window-option -g xterm-keys on
+
+# Plugins ---------------------------------------------------------------------
+# Tmux-Power Theme
+set -g @tmux_power_theme '#bfbfbf' # Gray
+run-shell "~/.tmux/tmux-power/tmux-power.tmux"
